# llama.cpp

./: cache_manager.py  compile.sh  convert_hf_to_gguf.py  run_llamacpp.sh  run_simple.sh  run_sparkinfer.sh  test_sparkinfer.sh
examples/simple/: simple.cpp
ggml/include/: ggml.h
ggml/src/: ggml.c
ggml/src/ggml-cpu/: ggml-cpu.c  ggml-cpu.cpp
ggml/src/ggml-cuda/: axpy_sparse.cu  axpy_sparse.cuh  ggml-cuda.cu  mmb_sparse.cu  mmb_sparse.cuh  mmv.cu  mmv_sparse.cu  mmv_sparse.cuh
gguf-py/gguf/: constants.py  gguf_writer.py  tensor_mapping.py
include/: llama.h
sparkinfer-py/: pyproject.toml
sparkinfer-py/src/sparkinfer/: __main__.py  export_split.py  partition_reader.py
src/: CMakeLists.txt  llama-arch.cpp  llama-arch.h  llama-context.cpp  llama-graph.cpp  llama-graph.h  llama-hparams.h  llama-model-loader.cpp  llama-model-loader.h  llama-model-saver.cpp  llama-model.cpp  llama-model.h  llama-vocab.cpp  llama.cpp
